<resources>
    <string name="app_name">Calmify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meditate">Meditate</string>
    <string name="home">Home</string>
    <string name="activity">activity</string>
    <string name="community">Community</string>
    <string name="sleep">Sleep</string>
    <string name="reset">reset</string>
    <string name="journal">Journal</string>
    <string name="quotes">Quotes\n</string>
</resources>